k8s/platformsvc-nodeport-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformsvc-nodeport-depl
spec:
  type: NodePort
  selector:
    app: platformsvc
  ports:
    - name: platformsvc
      protocol: TCP
      port: 80
      targetPort: 80
